--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+<meta name="description" content="Astuces Gaming & Tech : guides et tutoriels pour jeux vidéo et technologies.">
+<meta name="keywords" content="Brawl Stars, Switch, Mobile, Gaming, Tutoriel, Astuces">
+<meta name="author" content="Mateo">
+
 <meta charset="UTF-8">
 <title>Astuces Gaming & Tech</title>
 
@@ -171,3 +175,4 @@ function retourArticles() {
 
 </body>
 </html>
+
