--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <meta charset="UTF-8">
 <title>Astuces Gaming & Tech</title>
+<link rel="icon" type="image/png" href="favicon.png">
 
 <!-- Police Inter -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -175,4 +176,5 @@ function retourArticles() {
 
 </body>
 </html>
+
 
